k8s/ingress/cicd.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-middleware
  namespace: cicd
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cicd
  namespace: cicd
spec:
  entryPoints:
    - web
    - websecure 
  tls:
    secretName: ingress-tls
  routes:
    - match: Host(`gitlab.cuiliangblog.cn`)
      kind: Rule
      services:
        - name: gitlab-svc
          port: 80
      middlewares:
        - name: redirect-https-middleware
