k8s/ingress/monitor.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`alertmanager.cuiliangblog.cn`)
    kind: Rule
    services:
      - name: alertmanager-main
        port: 9093 
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`grafana.cuiliangblog.cn`)
    kind: Rule
    services:
      - name: grafana
        port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`prometheus.cuiliangblog.cn`)
    kind: Rule
    services:
      - name: prometheus-k8s
        port: 9090
