k8s/ingress/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.cuiliangblog.cn`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
